# RayTracer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateMake.sh  README.md  RayTracer.sln  ico_sphere.wavefront  premake5.lua  run.sh
RayTracer/: RayTracer.vcxproj  RayTracer.vcxproj.filters
RayTracer/src/: BoundingBox.h  Box.cpp  Box.h  Camera.h  Image.cpp  Image.h  ImageWriter.cpp  ImageWriter.h  Instrumentor.h  Light.h  Logger.h  Normals.h  Plane.cpp  Plane.h  Point.h  Ray.h  RayTracer.h  Renderer.cpp  Renderer.h  Scene.h  Shape.h  Sphere.h  Timer.h  Vector.h  main.cpp
RayTracer/src/Shapes/: Box.cpp  Triangle.cpp  Triangle.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Camera.cpp  Camera.h  Image.cpp  Image.h  ImageWriter.cpp  ImageWriter.h  Input.cpp  Input.h  Instrumentor.h  Point.h  Ray.h  RayTracer.h  Renderer.cpp  Renderer.h  Scene.h  Timer.h  Vector.h  main.cpp
src/Objects/: BoundingBox.h  Box.cpp  Box.h  Mesh.cpp  Mesh.h  Object.h  Plane.cpp  Plane.h  Sphere.h  Triangle.cpp  Triangle.h
src/OpenGL/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  imgui_impl_opengl3.cpp
src/Shapes/: Mesh.h  Plane.cpp  Shape.h  Sphere.h  Triangle.h
src/Tools/: Logger.cpp  Logger.h
src/shaders/: fragment.glsl  vertex.glsl
